[package]
name = "rs-music-client"
version = "0.1.0"
authors = ["STSchiff <chrisheib@gmx.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rodio = "0" # audio player
druid = {version = "0", features = ["im"]} # GUI
reqwest = {version = "0", features = ["blocking"]} # downloads & http requests
anyhow = "1" # Error handling
json = "0" # Json parsing
unicode-segmentation = "1"