[package]
name = "rs-music-client"
version = "0.1.0"
authors = ["STSchiff <chrisheib@gmx.de>"]
edition = "2018"

# For including the icon, winres requires
# rc.exe from https://developer.microsoft.com/en-us/windows/downloads/windows-10-sdk
# and windres.exe and ar.exe from http://mingw-w64.org/
# to be included in path
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rodio = {version = "0.13", features = ["mp3"]} # audio player
druid = {version = "0.7", features = ["im"]} # GUI
reqwest = {version = "0.11", features = ["blocking"]} # downloads & http requests
stable-eyre = "0.2" # Error handling
json = "0.12" # Json parsing
unicode-segmentation = "1.7"
confy = "0.4"
serde = "1.0"
serde_derive = "1.0"

[build-dependencies]
winres = "0.1"

[profile.release]
lto = true